# VibeVoice

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  docker-entrypoint.py  pyproject.toml
demo/: vibevoice_asr_inference_with_context.py  vibevoice_realtime_colab.ipynb
docs/: docker-8bit-guide.md  docker-bf16-guide.md  docker-vllm-guide.md  wake-on-lan-guide.md
scripts/: setup-inference-server.sh  transcribe-remote.conf.example  transcribe-remote.sh
vllm_plugin/: model.py
