[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibevoice"
version = "1.0.0"
authors = [
  { name="vibevoice team", email="VibeVoice@microsoft.com" },
]
description = "Open-Source Frontier Voice AI."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",                    # Unbounded — NVIDIA custom build (2.9.0a0+local) breaks == matching
    "transformers==4.57.6",
    "accelerate==1.12.0",
    "llvmlite==0.44.0",
    "numba==0.61.2",
    "diffusers==0.36.0",
    "tqdm==4.67.1",
    "numpy==2.1.0",
    "scipy==1.16.1",
    "librosa==0.11.0",
    "ml-collections==1.1.0",
    "absl-py==2.3.1",
    "av==16.1.0",
]

[project.urls]
"Homepage" = "https://github.com/microsoft/VibeVoice"
"Bug Tracker" = "https://github.com/microsoft/VibeVoice/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vibevoice*"]
